--- a/match/SignIn.storyboard
+++ b/match/SignIn.storyboard
@@ -69,6 +69,9 @@
                                 <state key="normal" title="Login">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="tappedLoginButton" destination="Hvr-yu-A2L" eventType="touchUpInside" id="cbM-Nv-HaG"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XtS-H7-0Zy">
                                 <rect key="frame" x="107.5" y="536" width="199" height="28"/>
