--- a/match/Base.lproj/Main.storyboard
+++ b/match/Base.lproj/Main.storyboard
@@ -80,7 +80,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3Uu-X2-lQF">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="887"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="799"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
@@ -133,7 +133,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="4J1-5G-tmH"/>
                     <connections>
-                        <outlet property="chatListTableView" destination="3Uu-X2-lQF" id="xpc-S2-4tv"/>
+                        <outlet property="chatListTableView" destination="3Uu-X2-lQF" id="ZTV-wh-pMf"/>
                         <segue destination="Kue-V0-YkY" kind="show" id="SYY-wY-tAr"/>
                     </connections>
                 </viewController>
@@ -386,6 +386,14 @@
             <point key="canvasLocation" x="995.65217391304361" y="1200.6696428571429"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="vfe-Ye-YIX">
+            <size key="intrinsicContentSize" width="57" height="30"/>
+        </designable>
+        <designable name="zYQ-7e-5Kr">
+            <size key="intrinsicContentSize" width="123" height="30"/>
+        </designable>
+    </designables>
     <resources>
         <image name="infinity" catalog="system" width="128" height="62"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
