--- a/match/StoryBoards/Base.lproj/Main.storyboard
+++ b/match/StoryBoards/Base.lproj/Main.storyboard
@@ -175,7 +175,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Cx-ZT-q6B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2850.7246376811595" y="521.65178571428567"/>
+            <point key="canvasLocation" x="3048" y="522"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="Gn1-oG-wLV">
@@ -272,6 +272,59 @@
             </objects>
             <point key="canvasLocation" x="2118.840579710145" y="1909.8214285714284"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="06c-bH-42N">
+            <objects>
+                <navigationController id="FYE-Gs-7S1" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="SXQ-bL-QLE"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="BKr-CZ-d9n">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="JZ8-2j-uTE" kind="relationship" relationship="rootViewController" id="pIa-Yw-8WC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q41-r2-cS5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1104" y="2597"/>
+        </scene>
+        <!--User List View Controller-->
+        <scene sceneID="nTi-Xc-Eg8">
+            <objects>
+                <viewController id="JZ8-2j-uTE" customClass="UserListViewController" customModule="match" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ch7-Ql-3gh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YyS-je-SvD">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ZJd-Cd-iPT">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZJd-Cd-iPT" id="YnO-yi-uX8">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="zRD-IO-5TO"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="YRe-XF-DWP"/>
+                    <connections>
+                        <outlet property="userListTableView" destination="YyS-je-SvD" id="hrM-dk-aHv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jQE-vO-U1S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2118.840579710145" y="2596.875"/>
+        </scene>
         <!--Settings-->
         <scene sceneID="geW-Ex-7db">
             <objects>
@@ -305,6 +358,7 @@
                         <segue destination="ug5-yL-xvt" kind="relationship" relationship="viewControllers" id="dJY-Mw-15g"/>
                         <segue destination="ss5-E1-19S" kind="relationship" relationship="viewControllers" id="ht1-2m-REe"/>
                         <segue destination="B6I-Ro-pgu" kind="relationship" relationship="viewControllers" id="Nx4-De-GGF"/>
+                        <segue destination="FYE-Gs-7S1" kind="relationship" relationship="viewControllers" id="n6X-4n-XdQ"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oJX-9x-oE1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -389,14 +443,6 @@
             <point key="canvasLocation" x="995.65217391304361" y="1200.6696428571429"/>
         </scene>
     </scenes>
-    <designables>
-        <designable name="vfe-Ye-YIX">
-            <size key="intrinsicContentSize" width="57" height="30"/>
-        </designable>
-        <designable name="zYQ-7e-5Kr">
-            <size key="intrinsicContentSize" width="123" height="30"/>
-        </designable>
-    </designables>
     <resources>
         <image name="infinity" catalog="system" width="128" height="62"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
